# agentsurface

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  STATUS.md  TASKS.md  orchestrate.py  pyproject.toml  run_overnight.sh
.github/workflows/: ci.yml  deploy.yml
.orchestrate/: fanout_scanners.sh  fanout_tests.sh
.orchestrate/results/: TASK-010.json  TASK-011.json  TASK-012.json  TASK-013.json  TASK-014.json  TASK-015.json  TASK-026-auth_tests.json  TASK-026-discovery_tests.json  TASK-026-docs_tests.json  TASK-026-errors_tests.json  TASK-026-openapi_tests.json  TASK-026-sdk_tests.json
data/: seed_apis.yaml
docs/: METHODOLOGY.md  framework.md
src/agentsurface/: __init__.py  __main__.py  aggregate.py  badge.py  cli.py  framework.py  http.py  models.py  report.py  runner.py  site.py
src/agentsurface/scanners/: __init__.py  auth.py  base.py  discovery.py  docs.py  errors.py  openapi.py  sdk.py
templates/: api.html.j2  base.html.j2  framework.html.j2  index.html.j2  submit.html.j2
tests/: conftest.py  test_aggregate.py  test_models.py  test_runner_e2e.py  test_scanner_auth.py  test_scanner_discovery.py  test_scanner_docs.py  test_scanner_errors.py  test_scanner_openapi.py  test_scanner_sdk.py  test_site.py
tests/fixtures/auth/: docs_pass.html  home_pass.html  spec_with_apikey.json  spec_with_oauth.json
tests/fixtures/discovery/: agents_md.md  ai_plugin.json  robots_pass.txt
tests/fixtures/docs/: docs_page_jsgated.html  docs_page_pass.html  llms_txt.txt
tests/fixtures/errors/: error_no_code.json  error_pass.json
(+5 files in other folders)
